--- a/roles/narwhal/tasks/main.yml
+++ b/roles/narwhal/tasks/main.yml
@@ -55,4 +55,4 @@
 
 - name: log in to registry
   become: true
-  shell: docker login -u {{ registy_username }} -p {{ registry_password }} {{ registry_url }}
+  shell: docker login -u {{ registry_username }} -p {{ registry_password }} {{ registry_url }}
