--- a/roles/narwhal/vars/config.example.yml
+++ b/roles/narwhal/vars/config.example.yml
@@ -5,3 +5,6 @@ challenge_wildcard_url: "http://*.chall.example.com"
 registry_username: "..."
 registry_password: "..."
 registry_url: "registry.example.com"
+
+aws_access_key_id: "..."
+aws_secret_access_key: "..."
