--- a/challenges.yml
+++ b/challenges.yml
@@ -15,15 +15,24 @@
       caddy_setcap: yes
       caddy_systemd_capabilities_enabled: true
       caddy_systemd_capabilities: "CAP_NET_BIND_SERVICE"
+      caddy_features: tls.dns.route53
+      caddy_environment_variables:
+        AWS_ACCESS_KEY_ID: "{{ aws_access_key_id }}"
+        AWS_SECRET_ACCESS_KEY: "{{ aws_secret_access_key }}"
       caddy_config: |
         {{ narwhal_url }} {
           proxy / localhost:8000 {
             transparent
           }
         }
-        {{ challenge_wildcard_url }} {
+        {% for url in challenge_urls %}
+        *.{{ url }} {
           proxy / localhost:8001 {
             transparent
           }
+          tls {
+            dns route53
+          }
         }
+        {% endfor %}
     - narwhal
