--- a/roles/ctfjs/tasks/main.yml
+++ b/roles/ctfjs/tasks/main.yml
@@ -12,10 +12,7 @@
 
 - name: install ctfjs
   become: true
-  npm:
-    name: ctfjs
-    global: true
-    state: latest
+  command: npm install -u -g ctfjs
 
 - name: download ctfjs plugins
   become: true
@@ -33,4 +30,4 @@
   shell: ctfjs stop || true
 
 - name: run ctfjs
-  shell: ctfjs start -f /src/ctfjs-plugins -o {{ cors_origins }} -e "NARWHAL_URL={{ narwhal_url }};NARWHAL_AUTH={{ narwhal_auth }};AWS_ACCESS_KEY_ID={{ aws_access_key_id }};AWS_SECRET_ACCESS_KEY={{ aws_secret_access_key }};AWS_REGION={{ aws_region }};MAILTRAIN_URL={{ mailtrain_url }};MAILTRAIN_LIST={{ mailtrain_list }};MAILTRAIN_TOKEN={{ mailtrain_token }};WEBDAV_URL={{ webdav_url }};WEBDAV_USERNAME={{ webdav_username }};WEBDAV_PASSWORD={{ webdav_password }};FILES_URL={{ files_url }};SHELL_USERNAME={{ shell_username }};SHELL_PASSWORD={{ shell_password }};SHELL_HOST={{ shell_host }};SHELL_PORT={{ shell_port }};SHELL_DEPLOY_URL={{ shell_deploy_url }};SHELL_DEPLOY_AUTH={{ shell_deploy_auth }}" -d "{{ database_uri }}" -s "{{ secret_key }}"
+  shell: ctfjs start -f /src/ctfjs-plugins -o {{ cors_origins }} -e "VERIFY_URL={{ verify_url }};RESET_URL={{ reset_url }};EMAIL_FROM={{ email_from }};NARWHAL_URL={{ narwhal_url }};NARWHAL_AUTH={{ narwhal_auth }};AWS_ACCESS_KEY_ID={{ aws_access_key_id }};AWS_SECRET_ACCESS_KEY={{ aws_secret_access_key }};AWS_REGION={{ aws_region }};MAILTRAIN_URL={{ mailtrain_url }};MAILTRAIN_LIST={{ mailtrain_list }};MAILTRAIN_TOKEN={{ mailtrain_token }};WEBDAV_URL={{ webdav_url }};WEBDAV_USERNAME={{ webdav_username }};WEBDAV_PASSWORD={{ webdav_password }};FILES_URL={{ files_url }};SHELL_USERNAME={{ shell_username }};SHELL_PASSWORD={{ shell_password }};SHELL_HOST={{ shell_host }};SHELL_PORT={{ shell_port }};SHELL_DEPLOY_URL={{ shell_deploy_url }};SHELL_DEPLOY_AUTH={{ shell_deploy_auth }}" -d "{{ database_uri }}" -s "{{ secret_key }}"
