--- a/roles/shell/tasks/main.yml
+++ b/roles/shell/tasks/main.yml
@@ -11,8 +11,17 @@
   copy: src=motd dest=/etc/motd
 - name: remove default motds
   shell: rm -rf /etc/update-motd.d/*
+- name: setup
+  apt: package=software-properties-common state=present
+- name: add deadsnakes ppa
+  apt_repository: repo="ppa:deadsnakes/ppa"
 - name: install dependencies
-  apt: package=quota,linux-image-extra-virtual,xinetd,gdb,python3,python3-pip,git,python3-setuptools,python-setuptools,gcc-multilib update_cache=true state=present
+  apt: package=quota,linux-image-extra-virtual,xinetd,gdb,python3.6,git,python-setuptools,gcc-multilib update_cache=true state=present
+- name: disable access to AWS metadata service
+  iptables:
+    chain: OUTPUT
+    destination: 169.254.169.254
+    jump: DROP
 - name: enable xinetd
   systemd:
     name: xinetd
@@ -119,10 +128,12 @@
     mode: 0700
     owner: www-data
     group: www-data
+- name: install pip
+  shell: curl https://bootstrap.pypa.io/get-pip.py | python3.6
 - name: install pipenv
   pip:
     name: pipenv
-    executable: pip3
+    executable: pip3.6
 - name: clone shell deployment script
   git:
     repo: https://github.com/blairsec/shell
